@@ -78,7 +78,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="title" type="label-for"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">0</property>
@@ -107,7 +109,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="artist" type="label-for"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">0</property>
@@ -136,7 +140,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="duration" type="label-for"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">0</property>
@@ -165,7 +171,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="year" type="label-for"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">0</property>
@@ -194,7 +202,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="album" type="label-for"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">0</property>
@@ -224,7 +234,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="title_label" type="labelled-by"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">1</property>
@@ -254,7 +266,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="artist_label" type="labelled-by"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">1</property>
@@ -284,7 +298,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="album_label" type="labelled-by"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">1</property>
@@ -314,7 +330,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="year_label" type="labelled-by"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">1</property>
@@ -344,7 +362,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="duration_label" type="labelled-by"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">1</property>
@@ -373,7 +393,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="comment" type="label-for"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">0</property>
@@ -403,7 +425,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="comment_label" type="labelled-by"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">1</property>
@@ -500,7 +524,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="dimensions" type="label-for"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">0</property>
@@ -529,7 +555,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="vcodec" type="label-for"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">0</property>
@@ -558,7 +586,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="framerate" type="label-for"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">0</property>
@@ -587,7 +617,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="video_bitrate" type="label-for"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">0</property>
@@ -617,7 +649,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="dimensions_label" type="labelled-by"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">1</property>
@@ -647,7 +681,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="vcodec_label" type="labelled-by"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">1</property>
@@ -677,7 +713,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="framerate_label" type="labelled-by"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">1</property>
@@ -707,7 +745,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="vbitrate_label" type="labelled-by"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">1</property>
@@ -804,7 +844,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="samplerate" type="label-for"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">0</property>
@@ -834,7 +876,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="samplerate_label" type="labelled-by"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">1</property>
@@ -863,7 +907,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="audio_bitrate" type="label-for"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">0</property>
@@ -893,7 +939,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="abitrate_label" type="labelled-by"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">1</property>
@@ -922,7 +970,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="acodec" type="label-for"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">0</property>
@@ -952,7 +1002,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="acodec_label" type="labelled-by"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">1</property>
@@ -981,7 +1033,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="channels" type="label-for"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">0</property>
@@ -1011,7 +1065,9 @@
 		  <property name="width_chars">-1</property>
 		  <property name="single_line_mode">False</property>
 		  <property name="angle">0</property>
-		  
+		  <accessibility>
+		    <relation target="channels_label" type="labelled-by"/>
+		  </accessibility>
 		</object>
 		<packing>
 		  <property name="left_attach">1</property>
