@@ -1,3 +1,9 @@
+2008-02-27  Philip Withnall  <pwithnall@svn.gnome.org>
+
+	* data/properties.ui:
+	* data/totem.ui: Re-add ATK properties to the UI files, converted
+	from the glade files. (Closes: #454642)
+
 2008-02-27  Bastien Nocera  <hadess@hadess.net>
 
 	* src/backend/bacon-video-widget-xine.c (load_video_out_driver):
